<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
  <CheckBox
      android:id="@+id/gps"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginRight="10dp"
      android:text="@string/use_gps"/>
  <CheckBox
      android:id="@+id/network"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_toRightOf="@id/gps"
      android:layout_marginRight="10dp"
      android:text="@string/use_network"/>
  <CheckBox
      android:id="@+id/cached"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_toRightOf="@id/network"
      android:text="@string/use_cached"/>
  <EditText
      android:id="@+id/minTime"
      android:layout_width="100dp"
      android:layout_height="wrap_content"
      android:layout_below="@id/gps"
      android:hint="@string/minTime"/>
  <EditText
      android:id="@+id/minDistance"
      android:layout_width="125dp"
      android:layout_height="wrap_content"
      android:layout_toRightOf="@+id/minTime"
      android:layout_alignTop="@+id/minTime"
      android:hint="@string/minDistance"/>
  <Button
      android:id="@+id/start"
      android:layout_width="150dp"
      android:layout_height="wrap_content"
      android:layout_below="@id/minTime"
      android:text="@string/start"/>
  <Button
      android:id="@+id/stop"
      android:layout_width="150dp"
      android:layout_height="wrap_content"
      android:layout_toRightOf="@id/start"
      android:layout_alignTop="@id/start"
      android:text="@string/stop"/>
  <ListView
      android:id="@+id/android:list"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:layout_below="@id/start"
      android:transcriptMode="alwaysScroll"/>
</RelativeLayout>
